Fix lombok and jackson issue, remove deprecated method invocation, fix tests